@@ -1,0 +1,28 @@
+/*
+ * Copyright 2008-2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package net.test.hasor.core._07_binder;
+import net.hasor.core.ApiBinder;
+import net.hasor.core.binder.ApiBinderCreater;
+/**
+ * @version : 2016-12-16
+ * @author 赵永春 (zyc@hasor.net)
+ */
+public class TestBinderCreater implements ApiBinderCreater {
+    @Override
+    public TestBinder createBinder(ApiBinder apiBinder) {
+        return new TestBinderImpl(apiBinder);
+    }
+}
