@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<config xmlns="http://project.hasor.net/hasor/schema/main">
+
+    <hasor.apiBinderSet>
+        <binder type="net.test.hasor.core._07_binder.TestBinder">net.test.hasor.core._07_binder.TestBinderCreater</binder>
+    </hasor.apiBinderSet>
+
+</config>
